FlexCat Open Source - Changelog
-------------------------------

$Id$
$Source$

2006-12-25  David Rey <tactica@users.sourceforge.net>

    * makefile: now detects AmigaOS 4 automatically and doesn't need
      "OS=AmigaOS4" anymore (thanks to Henning Nielsen Lund for the
      patch)
    * getft.c: fixed the remaining warning (Henning again)
    * createcat.c: now always generates 4-digit years

2006-12-24  David Rey <tactica@users.sourceforge.net>

    * in: removed, no use for it

2006-11-23  David Rey <tactica@users.sourceforge.net>

    * Makefile: added "-Wall -Wwrite-strings" to the default CFLAGS,
      also added explicitly the native MorphOS GCC to the MorphOS build
      process, and the AmigaOS/m68k GCC to the original AmigaOS build,
      plus the missing getft.o object and "-DNO_INLINE_STDARG" as CFLAGS to
      the latter, thanks to Joachim Birging and Henning Nielsen Lund for
      the patches.
    * getft.c: replaced the reference to ZERO with NULL for compatibility
      (again Joachim)

2006-11-01  David Rey <tactica@users.sourceforge.net>

    * Makefile: now builds with recent versions of GCC for OS4
      (-newlib -> -mcrt=newlib), supports crosscompilers for
      this target, added -Wall -Wwrite-strings to the CFLAGS for
      the OS4 target.
      (Patch #1588835 from Henning Nielsen Lund <hnl_dk@users.sourceforge.net>)
    * createcat.c, createcatsrc.c, createct.c, flexcat.h, getft.c, globals.c,
      readprefs.c, scancd.c, scanct.c, utils.c: no longer throw warnings with
      -Wwrite-strings
      (same patch)
    * flexcat.h: modified version string to mark the current build as a
      development version
    * lib/NoAutoC_c.sd, lib/NoAutoC_h.sd: fixed -Wwrite-strings warnings
      in the auto-generated files.
      (Patch #1588907 from Henning Nielsen Lund <hnl_dk@users.sourceforge.net>)
    * locale.c, flexcat_cat.h: regenerated

2006-03-25  David Rey <tactica@users.sourceforge.net>
