@@ -12,6 +12,9 @@ $Source$
       patch)
     * getft.c: fixed the remaining warning (Henning again)
     * createcat.c: now always generates 4-digit years
+    * createct.c: no longer forces a local codeset while updating an
+      old translation on a system using locale.library V47 or newer
+      (fixes bug #1367295)
 
 2006-12-24  David Rey <tactica@users.sourceforge.net>
 
